@@ -24,6 +24,7 @@ Version ??, 28 Feb 2007 - ?
 - created the mutest_start macro, cleaned up the assertion routines.
 - Created test flavors.  Now it's easy for people to customize their asserts.
 - Split mutest from tmtest's zutest.c/.h files.
+- Got rid of mutest_proc, now clients handle calling the unit tests 100%
 
 Version 0.7,  16 Feb 2007
 - turn dependency tree into functions
